--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,11 @@ body {
   .collapsed{
       position: top right;
   }
+  
+
+  #collapsable-nav  * * a {
+      background-color: rgb(224, 158, 82);
+  }
 
   #header-nav .container {
       margin:0;
